--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">VkNewsClient</string>
+    <string name="template_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
 </resources>
