--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="navigation_item_main">Главная</string>
     <string name="navigation_item_favorite">Избранное</string>
     <string name="navigation_item_profile">Профиль</string>
+    <string name="button_auth">Авторизоваться</string>
     <integer name="com_vk_sdk_AppId">51730514</integer>
 </resources>
