--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="navigation_item_favorite">Избранное</string>
     <string name="navigation_item_profile">Профиль</string>
     <string name="button_auth">Авторизоваться</string>
+    <string name="comments">Комментарии</string>
     <integer name="com_vk_sdk_AppId">51730514</integer>
 </resources>
