Начал реализовывать экран профиля, сделал отображение основной информации о профиле

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,9 @@
     <string name="navigation_item_profile">Профиль</string>
     <string name="button_auth">Авторизоваться</string>
     <string name="comments">Комментарии</string>
+    <string name="full_information">Подробная информация</string>
+    <string name="main_town">Родной город: </string>
+    <string name="name_profile">Имя пользователя:</string>
+    <string name="b_date">День Рождения:</string>
     <integer name="com_vk_sdk_AppId">51730514</integer>
 </resources>
