--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="main_town">Родной город: </string>
     <string name="name_profile">Имя пользователя:</string>
     <string name="b_date">День Рождения:</string>
+    <string name="all_posts">Все записи</string>
     <integer name="com_vk_sdk_AppId">51730514</integer>
 </resources>
