--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="empty_favorites">Вы пока-что ничего не добавили в избранное.</string>
     <string name="save_post">Сохранить</string>
     <string name="cancel">Отмена</string>
+    <string name="news">Новсти</string>
+    <string name="empty_comments">Комментариев пока что нету.</string>
     <integer name="com_vk_sdk_AppId">51730514</integer>
 </resources>
